more text and styling tweaks, fixing top nav item height disparity on small widths

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
 
 #nav {
 	display: flex;
-	justify-content: center;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -36,6 +35,10 @@ body {
 	padding: 25px 10px;
 	text-decoration: none;
 	height: 100%;
+	min-height: 57px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .nav-item:hover {
@@ -163,7 +166,6 @@ body {
 }
 
 #venueInnerImg img {
-	/*height: 100%;*/
 	width: 100%;
 }
 
@@ -291,8 +293,10 @@ body {
 }
 
 #codeEntry {
+	font-family: Papyrus, fantasy;
+	font-weight: bold;
 	text-align: center;
-	padding: 100px 0;
+	padding: 50px 0;
 }
 
 #rsvp .content svg {
